--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Anta&family=Kode+Mono:wght@400..700&display=swap');
-
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
@@ -7,13 +5,13 @@ body {
 }
 
 canvas, .pong-game {
-  border: 2px solid #ccc;
+  border: 2px solid var(--primaryAccent);
+  border-radius: .5rem;
 }
 
 header {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   background-color: var(--header-color);
 }
 
@@ -23,20 +21,22 @@ header img {
 }
 
 header h1 {
-  color: var(--header-text);
+  color: var(--primaryAccent);
   font-weight: bold;
   font-size: 1.875rem;
-  font-family: "Kode Mono", "Courier New", "Menlo";
+  font-family: "Inter", sans-serif;
   padding-left: 1.25rem;
   margin: 0px;
 }
 
-header button {
-  font-weight: bold;
-  font-family: "Anta", "Helvetica Neue", "Verdana";
+button {
+  font-weight: 700;
+  font-family: "Inter", sans-serif;
+  font-size: 100%;
   color: var(--header-text);
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  cursor: pointer;
+  padding-top: 0.61rem;
+  padding-bottom: 0.61rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   border-radius: .5rem;
@@ -51,7 +51,7 @@ header nav {
   margin-left: auto;
 }
 
-header button:hover {
+button:hover {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   padding-bottom: 0.5rem;
@@ -62,20 +62,104 @@ header button:hover {
 
 footer a {
   color: var(--header-text);
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+footer i {
+  font-size: 5em;
 }
 
 footer {
-  display: grid;
-  height: 50px;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: var(--header-color)
 }
 
-.social {
-  text-align: right;
-  padding-right: 1.25rem;
+.links {
+  padding-left: 1.25rem;
+}
+
+.pong-game {
+  display: block;
+  margin: auto;
+  width: 400px;
+}
+
+.snake-score-container {
+  display: grid;
+  grid-template-columns: 200px 200px;
+  text-align: center;
+}
+
+.score, .highScore {
+  color: var(--primaryAccent);
+  font-weight: 700;
+}
+
+.snake-game {
+  display: grid;
+  justify-content: center;
+}
+
+.social i {
+  width: 5rem;
+  height: 5rem;
+  /* display: block; */
+}
+
+.social a {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.social {
+  display: flex;
+}
+
+
+main p {
+  font-family: "Inter", sans-serif;
+  line-height: 1.5;
+}
+
+main {
+  width: 60%;
+  margin: auto;
+  border: 2px solid var(--primaryAccent);
+  border-radius: .5rem;
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.padding {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+main h3 {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  text-align: center;
+  color: var(--primaryAccent);
+}
+
+main h4 {
+  color: var(--primaryAccent);
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+main h3, main h4 {
+  font-family: "Inter", sans-serif;
+}
+
+strong {
+  color: var(--primaryAccent);
 }
 
 :root {
@@ -87,14 +171,6 @@ footer {
   --secondaryColor: #202B37;
   --primaryAccent: #44AFF5;
   --secondaryAccent: #3C8BBB;
-}
-
-main p {
-  font-family: "Kode Mono", "Courier New", "Menlo";
-}
-
-main h3, main h4 {
-  font-family: "Kode Mono", "Courier New", "Menlo";
 }
 
 @media (prefers-color-scheme: dark) {
